fix: Increase min-height of tables to prevent hidden overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -103,6 +103,7 @@ header {
 
 .table-container {
 	overflow-y: hidden;
+	min-height: 400px;
 }
 
 .button-worker {
